--- a/package.json
+++ b/package.json
@@ -1,15 +1,20 @@
 {
   "name": "Hono-Preact-Island",
+	"type": "module",
   "scripts": {
-    "dev": "tsx watch src/server.ts"
+    "dev": "tsx watch src/server.tsx"
   },
   "dependencies": {
     "@hono/node-server": "^1.12.0",
+    "esbuild": "^0.23.0",
     "hono": "^4.5.3",
-    "socket.io": "^4.7.5"
+    "serialize-javascript": "^6.0.2",
+    "socket.io": "^4.7.5",
+    "vite": "^5.3.5"
   },
   "devDependencies": {
     "@types/node": "^20.11.17",
+    "@types/serialize-javascript": "^5.0.4",
     "tsx": "^4.7.1"
   }
 }
