--- a/package.json
+++ b/package.json
@@ -1,11 +1,14 @@
 {
   "name": "Hono-Preact-Island",
-	"type": "module",
+  "type": "module",
   "scripts": {
-    "dev": "tsx watch src/server.tsx"
+		"client:dev": "node build.mjs",
+    "server:dev": "tsx watch src/server.tsx",
+		"dev": "concurrently \"npm run client:dev\" \"npm run server:dev\""
   },
   "dependencies": {
     "@hono/node-server": "^1.12.0",
+    "concurrently": "^8.2.2",
     "esbuild": "^0.23.0",
     "hono": "^4.5.3",
     "serialize-javascript": "^6.0.2",
