--- a/package.json
+++ b/package.json
@@ -2,9 +2,15 @@
   "name": "hono-islands",
   "type": "module",
   "scripts": {
-		"client-dev": "node build-islands.mjs",
+		"client-dev": "node build-islands.mjs --watch",
+		"client-build": "node build-islands.mjs",
+
     "server-dev": "tsx watch --clear-screen=false src/server.tsx",
-		"dev": "concurrently -n client,server💻 \"npm:client-dev\" \"npm:server-dev\""
+    "server-build": "tsc",
+
+		"dev": "concurrently -n client,server💻 \"npm:client-dev\" \"npm:server-dev\"",
+		"build": "npm run client-build && npm run server-build",
+		"start": "node dist/server"
   },
   "dependencies": {
     "@hono/node-server": "^1.12.0",
