--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "socket.io": "^4.7.5",
+    "superjson": "^2.2.2",
     "zod": "^3.24.3"
   },
   "devDependencies": {
