--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "concurrently": "^8.2.2",
     "esbuild": "^0.23.0",
     "hono": "^4.7.7",
+    "prettier": "^3.5.3",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "socket.io": "^4.7.5",
