--- a/package.json
+++ b/package.json
@@ -1,32 +1,34 @@
 {
-  "name": "hono-islands",
-  "type": "module",
-  "scripts": {
-    "client-dev": "node build-islands.mjs --watch",
-    "client-build": "node build-islands.mjs",
-    "server-dev": "tsx watch --clear-screen=false src/server.tsx",
-    "server-build": "tsc",
-    "dev": "concurrently -n client,server💻 \"npm:client-dev\" \"npm:server-dev\"",
-    "build": "npm run client-build && npm run server-build",
-    "start": "node dist/server"
-  },
-  "dependencies": {
-    "@hono/node-server": "^1.12.0",
-    "@hono/react-renderer": "^1.0.1",
-    "concurrently": "^8.2.2",
-    "esbuild": "^0.23.0",
-    "hono": "^4.7.7",
-    "prettier": "^3.5.3",
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0",
-    "socket.io": "^4.7.5",
-    "superjson": "^2.2.2",
-    "zod": "^3.24.3"
-  },
-  "devDependencies": {
-    "@types/node": "^20.11.17",
-    "@types/react": "^19.1.2",
-    "@types/react-dom": "^19.1.2",
-    "tsx": "^4.7.1"
-  }
+	"name": "hono-islands",
+	"type": "module",
+	"scripts": {
+		"client-dev": "node build-islands.mjs --watch",
+		"client-build": "node build-islands.mjs",
+		"server-dev": "tsx watch --clear-screen=false src/server.tsx",
+		"server-build": "tsc",
+		"dev": "concurrently -n client,server💻 \"npm:client-dev\" \"npm:server-dev\"",
+		"build": "npm run client-build && npm run server-build",
+		"start": "node dist/server",
+		"prettier:fix": "prettier --write .",
+		"prettier:check": "prettier --check ."
+	},
+	"dependencies": {
+		"@hono/node-server": "^1.12.0",
+		"@hono/react-renderer": "^1.0.1",
+		"concurrently": "^8.2.2",
+		"esbuild": "^0.23.0",
+		"hono": "^4.7.7",
+		"prettier": "^3.5.3",
+		"react": "^19.1.0",
+		"react-dom": "^19.1.0",
+		"socket.io": "^4.7.5",
+		"superjson": "^2.2.2",
+		"zod": "^3.24.3"
+	},
+	"devDependencies": {
+		"@types/node": "^20.11.17",
+		"@types/react": "^19.1.2",
+		"@types/react-dom": "^19.1.2",
+		"tsx": "^4.7.1"
+	}
 }
