--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -6,7 +6,7 @@
 			"detail": "Build client and server before debugging",
 			"type": "npm",
 			"script": "build",
-			"problemMatcher": [],
+			"problemMatcher": []
 		}
 	]
 }
