--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,6 +5,7 @@
 		"target": "ESNext",
 		"module": "NodeNext",
 		"moduleResolution": "NodeNext",
+		"noUncheckedIndexedAccess": true,
 		"strict": true,
 		"skipLibCheck": true,
 		"esModuleInterop": true,
