--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,6 +8,7 @@
 		"noUncheckedIndexedAccess": true,
 		"strict": true,
 		"skipLibCheck": true,
+		"noImplicitAny": true,
 		"esModuleInterop": true,
 		"types": ["node"],
 		"jsx": "react-jsx",
