--- a/package.json
+++ b/package.json
@@ -2,13 +2,8 @@
 	"name": "hono-islands",
 	"type": "module",
 	"scripts": {
-		"client-dev": "node build-islands.mjs --watch",
-		"client-build": "node build-islands.mjs",
-		"server-dev": "tsx watch --clear-screen=false src/server.tsx",
-		"server-build": "tsc",
-		"dev": "concurrently --hide=\"0\" --prefix=\"none\"  \"npm:client-dev\" \"npm:server-dev\"",
-		"build": "npm run client-build && npm run server-build",
-		"start": "node dist/server",
+		"dev": "tsx watch --clear-screen=false src/server.tsx",
+		"start": "tsx --clear-screen=false src/server.tsx",
 		"prettier:fix": "prettier --write .",
 		"prettier:check": "prettier --check ."
 	},
@@ -23,12 +18,12 @@
 		"react-dom": "^19.1.0",
 		"socket.io": "^4.7.5",
 		"superjson": "^2.2.2",
+		"tsx": "^4.20.2",
 		"zod": "^3.24.3"
 	},
 	"devDependencies": {
 		"@types/node": "^20.11.17",
 		"@types/react": "^19.1.2",
-		"@types/react-dom": "^19.1.2",
-		"tsx": "^4.7.1"
+		"@types/react-dom": "^19.1.2"
 	}
 }
